# cerebras-assistant

./: .gitignore  README.md  config.json  config.py  main.py  pyproject.toml  qwen-review.md  requirements.txt  system_prompt.txt  test_cerebras_api.py  utils.py
patches/: context_improvements.py
