[project]
name = "cerebras"
version = "0.1.0"
description = "Cerebras Engineer Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cerebras-cloud-sdk>=1.46.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "rich>=14.1.0",
    "thefuzz>=0.22.1",
]
